testdata/golden/sema/valid/user_record_type.sg
// scenario: record type creation and field access
type Point = {
    x: int,
    y: int,
};

fn add_coords() -> int {
    let p: Point = { x: 1, y: 2 };
    return p.x + p.y;
}
