testdata/golden/sema/invalid/user_type_unknown_field.sg
// scenario: accessing an unknown field on a record type
type Point = {
    x: int,
    y: int,
};

fn bad_access() -> int {
    let p: Point = { x: 0, y: 1 };
    return p.z;
}
